# Kraken-websocket-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  LICENSE-MIT  README.md  demo.sh
examples/: advanced.rs  arbitrage.rs  backtest.rs  batch.rs  benchmark.rs  config.rs  demo_multi.rs  demo_orderbook.rs  demo_performance.rs  demo_ticker.rs  getting_started.rs  metrics.rs  multi_symbol.rs  orderbook.rs  orders.rs  orders_mgmt.rs  portfolio.rs  private_api.rs  retry.rs  stream.rs  ticker.rs  trades.rs
src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  metrics.rs  parser.rs  rate_limit.rs  stream.rs  wasm_ws.rs
src/operation/: mod.rs  subscribe_ticker.rs
src/protocol/: event.rs  mod.rs  order.rs  ping.rs  subscribe.rs  trades.rs
src/types/: mod.rs  order.rs  subscription.rs  ticker.rs
tests/: integration_tests.rs
